--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
   <body>
     <div class="header">
-      <img src="../imagini/me.jpeg" alt="Andrei's profile picture">
+      <img src="imagini/me.jpeg" alt="Andrei's profile picture">
 
       <ul>
         <li><a href="projects.html">My Projects</a></li>
